--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cinema_management
+spring.datasource.url=jdbc:mysql://127.0.0.1:3305/cinema_management
 spring.datasource.username=root
-spring.datasource.password=061204aA
+spring.datasource.password=visualc++
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.docker.compose.enabled=false
 #jdbc:mariadb://127.0.0.1:3305/cinema_management
 server.port=9999
