--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3305/smartcine
-#spring.datasource.username=root
-#spring.datasource.password=dbsmartcinedinhvl
-spring.datasource.url=jdbc:mysql://localhost:3306/smartcine
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cinema_management
+spring.datasource.url=jdbc:mysql://localhost:3305/smartcine
 spring.datasource.username=root
-spring.datasource.password=
-
+#spring.datasource.password=061
+spring.datasource.password=dbsmartcinedinhvl
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.port=9999
-spring.web.resources.add-mappings=false
